<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login_Activity"
    android:padding="20dp">


    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="28dp"
        android:layout_height="30dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/notification" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="66dp"
        android:layout_marginTop="24dp"
        android:text="@string/Login2"
        android:textColor="#FC4755"
        android:textSize="24sp"
        android:textStyle="bold"

        />

    <EditText
        android:id="@+id/email"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="100dp"
        android:layout_marginStart="32dp"
        android:hint="@string/Email" />

    <EditText
        android:id="@+id/password"
        android:inputType="textPassword"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:layout_below="@id/email"
        android:layout_marginTop="32dp"
        android:layout_marginStart="32dp"
        android:hint="@string/Password" />

    <Button
        android:id="@+id/login"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_below="@id/radioGroup"
        android:layout_alignParentStart="true"
        android:layout_marginStart="32dp"
        android:layout_marginTop="42dp"
        android:text="@string/Login"
        android:backgroundTint="#FEAF9D"
        android:textSize="16sp"
        />
    <TextView
        android:id="@+id/select_role"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:text="@string/selectRole"
        android:layout_below="@id/password"
        android:textColor="#FC4755"
        android:textSize="20dp"
        android:textStyle="bold"

        />
    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/select_role"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:padding="10dp"
        >

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="#FE5A54"
            android:foregroundTint="#FA817D"
            android:text="@string/CPEmployeeShort"
            android:textColorHighlight="#FE5A54"
            android:textColorLink="#FDAE9C"
            android:textSize="16dp" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:buttonTint="#FE5A54"
            android:foregroundTint="#FA817D"
            android:text="@string/Citizen"
            android:textColorHighlight="#FE5A54"
            android:textColorLink="#FDAE9C"
            android:textSize="16dp" />/>
    </RadioGroup>


</RelativeLayout>