<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register_Activity"
    android:padding="20dp">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="28dp"
        android:layout_height="30dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/notification" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="66dp"
        android:layout_marginTop="24dp"
        android:text="Register"
        android:textColor="#FC4755"
        android:textSize="24sp"
        android:textStyle="bold"

        />

    <EditText
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="100dp"
        android:layout_marginStart="32dp"
        android:hint="@string/Email"
        android:id="@+id/email"
        />
    <EditText

        android:hint="@string/Password"
        android:id="@+id/password"
        android:inputType="textPassword"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:layout_below="@id/email"
        android:layout_marginTop="32dp"
        android:layout_marginStart="32dp"/>



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
        android:layout_width="280dp"
        android:layout_height="80dp"
        android:layout_marginTop="32dp"
        android:layout_marginStart="32dp"

        app:layout_constraintEnd_toEndOf="parent"
        android:layout_below="@id/password">

        <AutoCompleteTextView
            android:id="@+id/autoCompleteTextView3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:inputType="none"
            android:text="@string/Citizen" />
    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="32dp"
        android:layout_marginTop="50dp"
        android:backgroundTint="#FEAF9D"
        android:textSize="16sp"
        android:layout_below="@id/textInputLayout2"
        android:text="@string/register"
        android:id="@+id/register"/>
</RelativeLayout>