<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/submit_event"
        android:layout_width="120dp"
        android:layout_height="65dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:backgroundTint="#FEAF9D"
        android:text="@string/upload"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBar" />

    <EditText
        android:id="@+id/EditText_event_title"
        android:layout_width="289dp"
        android:layout_height="58dp"
        android:layout_marginTop="108dp"
        android:layout_marginEnd="52dp"
        android:ems="10"
        android:hint="@string/Title"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="#FEAF9D"
        android:text="@string/Logout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        />

    <Button
        android:id="@+id/buttonBack"
        android:layout_width="120dp"
        android:layout_height="65dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#FEAF9D"
        android:text="@string/Back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBar" />

    <Button
        android:id="@+id/buttonChooseFile"
        android:layout_width="290dp"
        android:layout_height="55dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="52dp"
        android:backgroundTint="#FEAF9D"
        android:text="@string/uploadImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="219dp"
        android:layout_height="183dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="96dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonChooseFile"
        app:srcCompat="@android:drawable/ic_menu_report_image" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="238dp"
        android:layout_height="23dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="84dp"
        android:indeterminate="false"
        android:max="100"
        android:progress="0"
        android:progressBackgroundTint="#673AB7"
        android:progressTint="#FE5A54"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
        android:layout_width="290dp"
        android:layout_height="53dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="52dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EditText_event_title">

        <AutoCompleteTextView
            android:id="@+id/autoCompleteTextView3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:inputType="none"
            android:text="Fire" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="144dp"
        android:layout_height="40dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:text="@string/uploadEventTitle"
        android:textColor="#FC4755"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imageView5"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="28dp"
        android:layout_height="30dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/notification" />
</androidx.constraintlayout.widget.ConstraintLayout>