<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomePage">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="Smart Alert"
        android:textColor="#FC4755"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="201dp"
        android:layout_height="257dp"
        android:layout_marginStart="104dp"
        android:layout_marginTop="44dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:srcCompat="@drawable/emergency_contact" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="28dp"
        android:layout_height="30dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/notification" />

    <Button
        android:id="@+id/reportBtn"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="#FEAF9D"
        android:text="@string/ReportEvent"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <Button
        android:id="@+id/viewAllBtn"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#FEAF9D"
        android:text="@string/SubToApp"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reportBtn" />

    <Button
        android:id="@+id/viewAnBtn"
        android:layout_width="303dp"
        android:layout_height="65dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="112dp"
        android:backgroundTint="#FEAF9D"
        android:text="@string/viewAnalytics"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reportBtn" />
</androidx.constraintlayout.widget.ConstraintLayout>